--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="icons8-stocks-growth-48.png">
 		<link rel="stylesheet" href="index.css" />
-		<title>Bovespa/Empresas</title>
+		<title>Ibovespa/Empresas</title>
 	</head>
 	<body>
 		<noscript>
